--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
-    "sort-by": "^1.2.0"
+    "sort-by": "^0.0.2",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -26,5 +31,18 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "vite": "^5.3.4"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "vite.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Hroney/MorrolanTV-Website.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Hroney/MorrolanTV-Website/issues"
+  },
+  "homepage": "https://github.com/Hroney/MorrolanTV-Website#readme"
 }
