--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
     "sort-by": "^0.0.2",
-    "xml2js": "^0.6.2"
+    "xml2js": "^0.6.2",
+    "next": "^14.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
