--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "start-server": "node server.js",
-    "start": "npm run start-server && npm run dev"
+    "preview": "vite preview"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -22,8 +20,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
     "sort-by": "^0.0.2",
-    "xml2js": "^0.6.2",
-    "next": "^14.0.0"
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
